JEAP-6518 Remove milestones